--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: google_drive_client
-description: A new Flutter package project.
-version: 1.0.0
-author: hokamc
+description: A Handful Google Drive Client For Dart
+version: 1.0.1
 homepage: https://github.com/hokamc/google_drive_client
 
 environment:
@@ -13,6 +12,7 @@ dependencies:
     sdk: flutter
   dio: ^3.0.10
   path_provider: ^1.6.24
+  path: ^1.7.0
   mime_type: ^0.3.2
 
 dev_dependencies:
